# KoWoPlanner

./: .env.example  .gitignore  README.md  docker-compose.yml  draft.docx.docx  index.html  nginx.conf  package-lock.json  package.json
Mockups/: KoWoPlanner Admin.dc.html  KoWoPlanner Dashboard.dc.html  KoWoPlanner Gantt.dc.html  KoWoPlanner Helpdesk.dc.html  KoWoPlanner Kalender.dc.html  KoWoPlanner Kanban.dc.html  KoWoPlanner Liste.dc.html  KoWoPlanner Login.dc.html  KoWoPlanner Meine Aufgaben.dc.html  KoWoPlanner Task-Modal.dc.html  README.md
backend/: .env  .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
backend-rust/: .gitignore  Cargo.toml  Dockerfile
backend-rust/src/: config.rs  db.rs  lib.rs  main.rs  models.rs  seed.rs
backend-rust/src/middleware/: auth.rs
backend-rust/src/routes/: auth.rs  mod.rs  tasks.rs  tickets.rs  users.rs  workspaces.rs
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/20260611062754_init/: migration.sql
backend/src/: config.ts  index.ts  validate.ts
backend/src/middleware/: auth.ts
backend/src/routes/: auth.ts  tasks.ts  tickets.ts  users.ts  workspaces.ts
src/: App.tsx  index.css
src/components/: CustomCharts.tsx  Header.tsx  Sidebar.tsx  TaskCard.tsx  TaskModal.tsx
src/data/: mockData.ts
src/services/: api.ts
src/store/: useStore.ts
src/styles/: theme.css
src/views/: AdminView.tsx  CalendarView.tsx  DashboardView.tsx  GanttView.tsx  KanbanView.tsx  ListView.tsx  LoginView.tsx  MyTasksView.tsx  SupportView.tsx
(+1 files in other folders)
