[package]
name = "backend-rust"
version = "1.0.0"
edition = "2021"

[lib]
name = "backend_rust"
path = "src/lib.rs"

[[bin]]
name = "backend-rust"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/seed.rs"


[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
uuid = { version = "1.9.1", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
